Fix the z-index for the jplayer

--- a/public/css/jplayer.blue.monday.css
+++ b/public/css/jplayer.blue.monday.css
@@ -40,7 +40,10 @@
   width: 100%; 
   position: fixed;
   bottom: 0px;
-  }
+  right: 0;
+  left: 0;
+  z-index: 1030;
+ }
 
 .jp-audio-stream {
   width: 182px; }
